--- a/chitietgiohang.html
+++ b/chitietgiohang.html
@@ -165,7 +165,7 @@
                         </div>
                         <div class="product-info">
                             <!-- Thông tin và giá -->
-                            <p><a href="/information/thongtin9.html">Cách dạy con ưu việt của người Do Thái</a></p>
+                            <p><a href="/information/thongtin.html" onclick="selectCourse(courseData8)">Cách dạy con ưu việt của người Do Thái</a></p>
                             <div class="mo-ta"> Vấn đề hiện nay của các ông bố bà mẹ trẻ là nuôi dạy con theo kiểu: (1) kinh nghiệm bản thân, (2) ảnh hưởng từ những thế...</div>
                             <div class="tac-gia"> Nguyễn Văn Trường An</div>
                             <div class="ql-price">
@@ -181,7 +181,7 @@
                         </div>
                         <div class="product-info">
                             <!-- Thông tin và giá -->
-                            <p><a href="/information/thongtin10.html">Quản Trị và Bán Hàng Đột Phá</a></p>
+                            <p><a href="/information/thongtin.html" onclick="selectCourse(courseData9)">Quản Trị và Bán Hàng Đột Phá</a></p>
                             <div class="mo-ta">Ngày nay khách hàng rất thông minh, nếu bạn không trở thành người bán hàng xuất sắc bạn sẽ không bán được hàng.</div>
                             <div class="tac-gia"> Nguyễn Văn Trường An</div>
                             <div class="ql-price">
@@ -197,7 +197,7 @@
                         </div>
                         <div class="product-info">
                             <!-- Thông tin và giá -->
-                            <p><a href="/information/thongtin11.html">Phân tích biểu đồ chứng khoán chuyên nghiệp</a></p>
+                            <p><a href="/information/thongtin.html" onclick="selectCourse(courseData10)">Phân tích biểu đồ chứng khoán chuyên nghiệp</a></p>
                             <div class="mo-ta"> Kiến thức trong khóa đào tạo tập trung vào những và kỹ năng mà học viên sẽ cần sử dụng thường xuyên trong suốt quá...</div>
                             <div class="tac-gia"> Nguyễn Văn Trường An</div>
                             <div class="ql-price">
@@ -213,7 +213,7 @@
                         </div>
                         <div class="product-info">
                             <!-- Thông tin và giá -->
-                            <p><a href="/information/thongtin12.html">Python Basics - Python Cơ Bản</a></p>
+                            <p><a href="/information/thongtin.html" onclick="selectCourse(courseData11)">Python Basics - Python Cơ Bản</a></p>
                             <div class="mo-ta"> Python là một ngôn ngữ lập trình bậc cao cho các mục đích lập trình đa năng. Python được thiết kế với ưu điểm mạnh là dễ đọc...</div>
                             <div class="tac-gia"> Nguyễn Văn Trường An</div>
                             <div class="ql-price">
